--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Inconsolata|Open+Sans|Poppins|Raleway" rel="stylesheet">
     <title>History of Rock in 100 Songs</title>
   </head>
-  <body>
+  <body style="background-color: #282828">
       <div id="app"></div>
   </body>
 </html>
