--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
   </head>
   <body style="background-color: #282828">
       <div id="app"></div>
+      <script src="https://unpkg.com/ionicons@4.2.4/dist/ionicons.js"></script>
   </body>
 </html>
